--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     
     <footer>
         <p>
-            כל הזכויות שמורות לבן ולאון ©
+            כל הזכויות שמורות לבן ©
         </p>
         <img class="img responsiv footer" src="image/footer/1.png" />
         <img class="img responsiv footer" src="image/footer/2.png" />
